--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Website for VESITConnect ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2"
