--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This application allows users to view detailed articles with a professional layout. Articles are fetched from a backend API, rendered in the center of the page, and styled beautifully using Tailwind CSS. The application ensures seamless rendering of HTML-formatted content, including images and other media.",
   "main": "index.js",
   "scripts": {
-    "build":"",
-    "start":"",
+    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":"npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
