--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "vc": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
