--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This application allows users to view detailed articles with a professional layout. Articles are fetched from a backend API, rendered in the center of the page, and styled beautifully using Tailwind CSS. The application ensures seamless rendering of HTML-formatted content, including images and other media.",
   "main": "index.js",
   "scripts": {
-    "build":"cd backend && install --legacy-peer-deps && cd ../frontend && npm install --legacy-peer-deps && npm run build",
+    "build":"cd backend && npm install --legacy-peer-deps && cd ../frontend && npm install --legacy-peer-deps && npm run build",
     "start":"cd ../backend && npm run start"
   },
   "keywords": [],
