--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build":"cd backend && npm install --legacy-peer-deps && cd ../frontend && npm install --legacy-peer-deps && npm run build",
-    "start":"cd ../backend && npm run start"
+    "start":"npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
